<resources>
    <string name="app_name">Swish Cards</string>
    <string name="placeholder">Placeholder</string>
    <string name="add_button">DONE</string>
    <string name="due_text">DUE</string>
    <string name="deck_text">DECK</string>
    <string name="back_button">BACK</string>
    <string name="settings_button">SETTINGS</string>
    <string name="decks_button">DECKS</string>
    <string name="due_date_hint">01-01-2021</string>
    <string name="sort_by_title">sort by:</string>
    <string name="sort_by_alpha_asc">Alphabetically Ascending</string>
    <string name="sort_by_alpha_des">Alphabetically Descending</string>
    <string name="sort_by_non_complete">Non-Completed</string>
    <string name="sort_by_due_date">Due Date</string>
    <string name="description_hamburger_menu"><![CDATA[Hamburger Menu -> Vertical Dropdown]]></string>
    <string name="delete_text">DELETE</string>
    <string name="compose_text_1">Flash Card application</string>
    <string name="compose_text_2">The following is a demonstration of using Android Compose to create a Flash card</string>
    <string name="compose_btn_next_card">Next Card</string>
    <string name="download">Download Decks</string>
    <string name="change_color_pref">Dark Mode</string>
    <string name="tba">TBA</string>
    <string name="delete_completed_decks">Delete Complete Decks</string>
    <string name="preference_file_key">com.piper.josh.swish.cards.2020.preferences_file_key</string>
    <string name="light_mode_pref_key">com.piper.josh.swish.cards.light_mode_pref_key</string>
    <string name="delete_all_decks">Delete All Decks</string>
    <string name="navigational_drawer_open">Open Navigational Drawer</string>
    <string name="navigational_drawer_close">Close Navigational Drawer</string>
    <string name="Decks">Swish Cards | Decks</string>
    <string name="nav_bar_general_title">General</string>
    <string name="Settings">Swish Cards | Settings</string>
    <string name="AddDeck">Swish Cards | Add Decks</string>
    <string name="start">START</string>
    <string name="top_bar_title_message">Swish Cards | %1$s</string>
    <string name="EditingQuestion">Swish Cards | Editing Card</string>
    <string name="question_text">Question</string>
    <string name="type_of_question">Type of Question</string>
    <string name="answer">Answer</string>
    <string name="flash_card_icon">Flash Card Icon in Navigation Drawer Header</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="review_VR">VR</string>
    <string name="review_AUDIO">Audio Assisted</string>
    <string name="review_UNLEARNED">Review Unlearned</string>
    <string name="review_ALL">Review All</string>
</resources>