<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ComposeComparison">

    <include layout="@layout/toolbar_compose" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/flashCardBTN"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/box"
            android:fontFamily="sans-serif-condensed-medium"
            android:lines="4"
            android:padding="16dp"
            android:text="@string/placeholder"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="25sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/compose_text_1"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/compose_text_2"
            android:textColor="#000000"
            android:textSize="15sp" />

        <Button
            android:id="@+id/nextCardBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/boxbutton"
            android:paddingHorizontal="10dp"
            android:text="@string/compose_btn_next_card" />

    </LinearLayout>

</LinearLayout>