<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/drawer"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".SettingsActivity">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header"
        android:layout_gravity="start"
        android:id="@+id/topbar_nav"
        app:menu="@menu/nav_drawer"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="10"
        android:orientation="vertical"
        android:background="@color/background_color"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/top_bar_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_weight="2"
                android:text="@string/Settings"
                android:textColor="#ffff"
                android:textSize="25sp" />

        </androidx.appcompat.widget.Toolbar>

    
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:baselineAligned="false"
        android:layout_weight="8"
        android:weightSum="15"
        android:layout_height="0dp">

        <LinearLayout style="@style/settings_items">

            <TextView
                style="@style/settings_item_text"
                android:text="@string/delete_all_decks"/>

            <TableRow style="@style/gobal_checkbox_tablerow">

                <CheckBox
                    android:id="@+id/delete_all_decks"
                    style="@style/global_checkbox"  />

            </TableRow>

        </LinearLayout>

        <LinearLayout style="@style/settings_items">

            <TextView
                style="@style/settings_item_text"
                android:text="@string/delete_completed_decks"/>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/gobal_checkbox_tablerow">

                <CheckBox
                    android:id="@+id/delete_complete_decks"
                    style="@style/global_checkbox" />

            </TableRow>


        </LinearLayout>

        <LinearLayout style="@style/settings_items">

            <TextView
                style="@style/settings_item_text"
                android:text="@string/change_color_pref"/>

            <TableRow style="@style/gobal_checkbox_tablerow">

                <CheckBox
                    android:id="@+id/light_mode_checkbox"
                    style="@style/global_checkbox" />

            </TableRow>

        </LinearLayout>

        <LinearLayout style="@style/settings_items">

            <TextView
                style="@style/settings_item_text"
                android:text="@string/tba"/>

            <TableRow style="@style/gobal_checkbox_tablerow">

                <CheckBox
                    android:id="@+id/Language_Setting"
                    style="@style/global_checkbox"  />

            </TableRow>

        </LinearLayout>





    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:paddingHorizontal="@dimen/small_text_size"
        android:layout_margin="@dimen/default_margin_size"
        android:layout_height="0dp"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text_size"
        android:text="@string/download"
        android:background="@drawable/downloaddecks"
        android:layout_weight="1"
        android:layout_gravity="bottom|center"/>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:id="@+id/bottom_navigation_view"
        app:menu="@menu/bottom_nav_bar"
        android:background="@color/nav_bottom_background_colour"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white"
        android:layout_weight="1"
        android:layout_height="0dp"/>


    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>