<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".AddCardActivity"
    tools:openDrawer="start">

        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:headerLayout="@layout/header"
            android:layout_gravity="start"
            android:id="@+id/topbar_nav"
            app:menu="@menu/nav_drawer"
            />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:id="@+id/activity_add_card_content"
            android:orientation="vertical"
            android:weightSum="10">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginBottom="@dimen/large_margin_size"
                android:background="@color/top_bar_color"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:text="@string/EditingQuestion"
                    android:textColor="#ffff"
                    android:textSize="25sp" />

            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/med_margin_size"
                android:layout_weight="8"
                android:background="@drawable/add_page"
                android:orientation="vertical"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="9"
                    android:orientation="vertical"
                    android:weightSum="10">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:gravity="center"
                            android:text="@string/type_of_question"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/med_text_size" />

                        <Spinner
                            android:id="@+id/activity_add_card_type_of_question"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginHorizontal="@dimen/med_margin_size"
                            android:background="@drawable/boxedittext"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textSize="@dimen/med_text_size" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:gravity="center"
                            android:text="@string/question_text"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/med_text_size" />

                        <EditText
                            android:id="@+id/activity_add_card_question"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/med_margin_size"
                            android:background="@drawable/boxedittext"
                            android:focusable="true"
                            android:gravity="center"
                            android:hint="@string/placeholder"
                            android:textColor="@color/white"
                            android:textColorHint="@color/hint_colour"
                            android:textSize="@dimen/med_text_size" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:gravity="center"
                            android:text="@string/answer"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/med_text_size" />

                        <EditText
                            android:id="@+id/activity_add_card_answer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/med_margin_size"
                            android:background="@drawable/boxedittext"
                            android:focusable="true"
                            android:gravity="center"
                            android:hint="@string/placeholder"
                            android:textColor="@color/white"
                            android:textColorHint="@color/hint_colour"
                            android:textSize="@dimen/med_text_size" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="13" />

                    <Button
                        android:id="@+id/activity_add_card_done_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:background="@drawable/boxbuttonadd"
                        android:paddingHorizontal="@dimen/med_margin_size"
                        android:text="@string/add_button"
                        android:textColor="@color/white"
                        android:textSize="35sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="2" />

                    <TextView
                        android:id="@+id/activity_add_card_delete_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginEnd="@dimen/default_margin_size"
                        android:gravity="end"
                        android:text="@string/delete_text"

                        android:textColor="@color/delete_color" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_container_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="vertical" />

    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>