<?xml version="1.0" encoding="utf-8"?>
    <androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:id="@+id/drawer"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start"
        tools:context=".FlashCardReview">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header"
        android:layout_gravity="start"
        android:id="@+id/topbar_nav"
        app:menu="@menu/nav_drawer"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        android:id="@+id/activity_flash_card_review_context"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/top_bar_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_weight="2"
                android:id="@+id/topbar_title"
                android:textColor="#ffff"
                tools:text="@string/placeholder"
                android:textSize="25sp" />
        </androidx.appcompat.widget.Toolbar>


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_weight="9.1"
                android:weightSum="10"
                android:layout_height="0dp">

                <ProgressBar
                    android:id="@+id/activity_flash_card_review_progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="@dimen/med_margin_size"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:max="10"
                    android:progress="0" />

                <TextView
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/question_text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/small_mid_text_size"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:background="@color/contrast_background"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/med_margin_size"
                    android:layout_weight="4">

                    <TextView
                        android:layout_width="match_parent"
                        android:gravity="center_horizontal"
                        android:id="@+id/activity_flash_card_review_question"
                        android:text="@string/placeholder"
                        android:textColor="@color/white"
                        android:textSize="@dimen/small_mid_text_size"
                        android:layout_height="match_parent"/>


                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:id="@+id/activity_flash_card_review_input"
                    android:text="@string/answer"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/small_mid_text_size"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:background="@color/contrast_background"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/med_margin_size"
                    android:layout_weight="4">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_marginHorizontal="@dimen/med_margin_size"
                        android:gravity="center_horizontal"
                        android:id="@+id/activity_flash_card_review_edit_text"
                        android:hint="@string/answer"
                        android:textColor="@color/white"
                        android:textSize="@dimen/small_mid_text_size"
                        android:layout_height="match_parent"/>
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="@dimen/med_margin_size"
                    android:id="@+id/activity_flash_card_review_next_button"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/med_text_size"
                    android:layout_gravity="bottom"
                    android:background="@drawable/nextbutton"
                    android:text="@string/compose_btn_next_card"
                    />


            </LinearLayout>


        <LinearLayout
            android:id="@+id/fragment_container_bottom_bar"
            android:orientation="vertical"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1.5"
            />




    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>
